// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Component Should render project without URL 1`] = `
<li>
  <i
    className="fa-li fa fa-tasks text-warning"
  />
  <p>
    <strong>
      title:
    </strong>
     description
  </p>
</li>
`;

exports[`Project Component Should render without crashing and match snapshot 1`] = `
<li>
  <i
    className="fa-li fa fa-tasks text-warning"
  />
  <p>
    <a
      href="https://samhwang.github.io"
      onClick={[Function]}
    >
      <strong>
        title:
      </strong>
    </a>
     description
  </p>
</li>
`;
